# spinneret

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.json.template  environment-min.yml  environment.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
docs/source/: CHANGELOG.md  conf.py  index.rst
docs/source/_templates/: CHANGELOG.md
docs/source/_templates/docs/: sidebarlogo.html
docs/source/dev/: contributing.rst  design.rst  maintaining.rst
docs/source/user/: api.rst  quickstart.rst  support.rst
src/spinneret/: __init__.py  annotator.py  benchmark.py  datasets.py  eml.py  graph.py  main.py  plot.py  shadow.py  silhouette.py  spinneret.py  sssom.py  utilities.py  workbook.py
src/spinneret/data/: prefixmaps.csv
src/spinneret/data/eml/: edi.3.9.xml  edi.3.9_no_geocoverage.xml  knb-lter-ntl.1.59.xml
tests/: conftest.py  edi.3.9_annotated.xml  edi.3.9_annotation_workbook.tsv  edi.3.9_annotation_workbook_annotated.tsv  test_annotator.py  test_benchmark.py  test_eml.py  test_graph.py  test_plot.py  test_shadow.py  test_spinneret.py  test_utilities.py  test_workbook.py
tests/data/benchmark/: termset_similarity_score_processed.json  termset_similarity_score_raw.json  termset_similarity_scores.tsv
tests/data/geoenv/: basic_example.json  different_data_source.json  empty_environment.json  incomplete_environment.json  knb-lter-and.3145.19.json  knb-lter-arc.1381.10.json  knb-lter-bes.950.421.json  multiple_environments.json
tests/data/vocab/: vocab_a.owl  vocab_b.ttl
(+26 files in other folders)
